packages/ui-library/src/css/rows/_row-builder.scss
.row-builder {
    &__row {
        align-items: flex-end;
        display: inline-flex;
        position: relative;

        &.input-row {
            margin: $spacing-lg 0;
        }

        &--underlined:not(:last-of-type) > :after {
            border-bottom: 1px solid $color-rabbit-fur;
            bottom: -$spacing-lg;
            content: '';
            left: 0;
            position: absolute;
            width: 100%;
        }
    }

    &__remove {
        margin-bottom: 1px;

        &__label {
            @include text-label;
            line-height: $font-size-reduced;
            min-height: $font-size-reduced;
            margin-bottom: 13px;
            text-transform: uppercase;
        }

        &__button {
            display: block;
            margin-left: $spacing-sm;
            margin-bottom: 6px;

            &--hidden {
                pointer-events: none;
                visibility: hidden;
            }
        }
    }

    &--form {
        &__row {
            align-items: flex-end;
            display: inline-flex;
            justify-content: space-between;
        }

        // Here for backward compatibility with old SSO Attributes template designs
        &__icon {
            font-size: 20px;
            margin-bottom: 11px;

            &--required {
                color: $color-dolphin;
            }
        }

        &__separator {
            font-size: 20px;
            margin: 0 20px 11px 8px;
        }

        &__input {
            &__option {
                color: $color-dolphin !important;
            }
        }

        & .row-builder__remove {
            justify-self: flex-end;
        }

        &__no-label-above {
            margin-top: 25px !important;
        }
    }
}

